--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,6 @@
 <% provide :title, t(".title") %>
-    <%= link_to "English", locale:"en" %>
-    <%= link_to "Vietnamese", locale:"vi" %>
-    <h1 class = "shadow"><%= t ".contact" %></h1>
-    <p>
-      <%= t ".content" %>
-    </p>
+<h1 class = "shadow"><%= t ".contact" %></h1>
+<p>
+  <%= t ".content" %>
+  <%= link_to t(".title_1"), "http://www.railstutorial.org/contact" %>.
+</p>
