--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,8 @@
 <% provide :title, t(".title") %>
-   <%= link_to "English", locale:"en" %>
-   <%= link_to "Vietnamese", locale:"vi" %> 
-   <h1><%= t ".help" %></h1>
-   <p>
-      <%= t ".content" %>
-   </p>
-
+<h1><%= t ".help" %></h1>
+<p>
+  <%= t ".content_1" %>
+  <%= link_to t(".title_2"), "http://www.railstutorial.org/help" %>
+  <%= t ".content_2" %>
+  <%= link_to t(".title_1"), "http://www.railstutorial.org/book" %>."
+</p>
