--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
-<% provide(:title, "Sign up") %>
-  <h1>Sign up</h1>
-  <p>This will be a signup page for new users.</p>
+<% provide :title, t(".title") %>
+<h1><%= t ".h1" %></h1>
+<p><%= t ".p" %></p>
