--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t(".title_2"), root_path %></li>
         <li><%= link_to t(".title_3"), help_path %></li>
-        <li><%= link_to t(".title_4") %>, "#" %></li>
+        <li><%= link_to t(".title_4"), signup_path %></li>
       </ul>
     </nav>
   </div>
